--- a/config/train_dense.yaml
+++ b/config/train_dense.yaml
@@ -1,5 +1,10 @@
 core:
   name: train_dense
+  output_dir: ./output/${core.name}/${now:%Y-%m-%d}/${now:%H-%M-%S}
+
+dataset: None
+dataloader: None
+model: None
 
 hydra:
   run:
