--- a/config/train_unet.yaml
+++ b/config/train_unet.yaml
@@ -9,12 +9,12 @@ hydra:
 ## Populated with default values from VITON-HD github
 ## Parameters explained in their respective classes
 trainer:
-  accelerator: gpu
+  accelerator: auto
   max_epochs: 2
   default_root_dir: ${core.output_dir}
-  limit_train_batches: 10 # Included as debugging tool
-  limit_val_batches: 10 # Included as debugging tool
-  log_every_n_steps: 5
+  limit_train_batches: 6 # Included as debugging tool
+  limit_val_batches: 6 # Included as debugging tool
+  log_every_n_steps: 3
 
 data:
   shuffle: True
