--- a/config/train_unet.yaml
+++ b/config/train_unet.yaml
@@ -10,7 +10,7 @@ hydra:
 ## Parameters explained in their respective classes
 trainer:
   accelerator: auto
-  max_epochs: 2
+  max_epochs: 10
   default_root_dir: ${core.output_dir}
   limit_train_batches: 6 # Included as debugging tool
   limit_val_batches: 6 # Included as debugging tool
@@ -27,13 +27,13 @@ data:
 
 model:
   _target_: dl_project.models.UNetModel_Lit
-  in_channels: 3
-  out_channels: 3
-  encoder_channels: [64, 128, 256, 512, 512, 512]
-  decoder_channels: [512, 512, 256, 128, 64, 4]
-  kernel_val: 4
-  encoder_stride: 2
-  decoder_stride: 0.5
+  in_channels: 22
+  out_channels: 4
+  encoder_channels: [64,128, 256, 512]
+  decoder_channels: [512, 256, 128,64]
+  kernel_val: 3
+  encoder_stride: 1
+  decoder_stride: 1
   padding_val: 1
   lr: 2e-4
 
