--- a/config/train_unet.yaml
+++ b/config/train_unet.yaml
@@ -12,9 +12,9 @@ trainer:
   accelerator: auto
   max_epochs: 100
   default_root_dir: ${core.output_dir}
-  limit_train_batches: 6 # Included as debugging tool
-  limit_val_batches: 6 # Included as debugging tool
-  log_every_n_steps: 3
+  # limit_train_batches: 6 # Included as debugging tool
+  # limit_val_batches: 6 # Included as debugging tool
+  log_every_n_steps: 50
 
 logger:
   save_dir: ${core.output_dir}/tb_logs
