--- a/config/test_dense.yaml
+++ b/config/test_dense.yaml
@@ -1,7 +1,7 @@
 core:
-  name: train_dense
+  name: test_dense
   output_dir: ./output/${core.name}/${now:%Y-%m-%d}/${now:%H-%M-%S}
-  mode: train
+  mode: test
   ckpt_path: null
 
 hydra:
