Adding to install script. Adding to vit config.

--- a/config/train_vit.yaml
+++ b/config/train_vit.yaml
@@ -18,6 +18,9 @@ trainer:
   limit_val_batches: 6 # Included as debugging tool
   log_every_n_steps: 3
 
+logger:
+  save_dir: ${core.output_dir}/tb_logs
+
 data:
   shuffle: True
   batch_size: 8
